<resources>
    <string name="app_name">DelControl</string>
    <string name="check_network_state">Проверьте состояние сети</string>
    <string name="an_internet_connection_is_required">Для нормальной работы приложения требуется интернет соединение.</string>
    <string name="orders">Заказы</string>
    <string name="google_maps_key">AIzaSyBlHNvzhC5Qhu0FqWbD03QDVBGUkgF7_UE</string>
    <string name="status">Статус:</string>
    <string-array name="courier_status">
        <item>Свободен: ожидаю заказ</item>
        <item>Занят: еду к клиенту</item>
        <item>Занят: на обеде</item>
        <item>Завершил работу</item>
    </string-array>
    <string-array name="order_status">
        <item>Новый</item>
        <item>В доставке</item>
        <item>Получен клиентом</item>
        <item>Оплачен</item>
        <item>Отменен</item>
    </string-array>
    <string name="location_tracking">Отслеживание местоположения</string>
    <string name="edit_account">Редактировать аккаунт</string>
    <string name="log_out_of_account">Выход из аккаунта</string>
    <string name="about_application">О приложении</string>
    <string name="registration">Регистрация</string>
    <string name="company_id">ID компании</string>
    <string name="name">ФИО</string>
    <string name="address">Адрес</string>
    <string name="email_address">E-mail адрес</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_prefix">+375</string>
    <string name="code">Код</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="complete_registration">Завершить регистрацию</string>
    <string name="already_have_an_account_login">У Вас уже есть аккаунт? Выполните вход</string>
    <string name="copyright">Copyright &#169; 2018 – 2019 Shumanski Dima \n
        All rights reserved.</string>
    <string name="version">Версия</string>
    <string name="passwords_must_match">Пароли должны совпадать</string>
    <string name="check_phone_number">Проверьте правильность ввода телефона</string>
    <string name="check_email_address">Проверьте правильность ввода email</string>
    <string name="fill_in_all_fields">Заполните все поля</string>
    <string name="problem_with_network">Проблема с сетью</string>
    <string name="complete">Операция выполнена успешно</string>
    <string name="order_list_updated">Список заказов обновлен</string>
    <string name="login">Вход</string>
    <string name="new_user_register_account">Новый пользователь? Зарегистрируйте аккаунт</string>
    <string name="order_number">№ заказа:</string>
    <string name="customer_name">Заказчик:</string>
    <string name="customer_address">Адрес:</string>
    <string name="delivery_date">Дата:</string>
    <string name="delivery_time">Время:</string>
    <string name="comment">Комментарий:</string>
    <string name="send">Отправить</string>
    <string name="products_in_order">Товары в заказе:</string>
    <string name="total_cost">Общая стоимость: </string>
    <string name="status_of_selected_order">Статус выбранного заказа</string>
    <string name="your_order_list_is_empty">Список Ваших заказов пуст</string>
</resources>